# LearnOpenGL

./: CMakeLists.txt  README.md  forawhile.txt  global.h  gs.cpp  lt_shader.fs  lt_shader.vs  main.cpp  point.gs  shaderSingleColor.fs  skybox.fs  skybox.vs  stb_image.cpp  texture.fs  texture.vs  window.fs  window.vs
include/: camera.h  global.h  texture.h  vertexObj.h
include/glad/: glad.h
src/: glad.c
